# docker-compose-host

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose-host.spec  docker-compose.yml  pyproject.toml
api/: Dockerfile  Dockerfile_without_expose  main.py
src/: main.rs
