[tool.poetry]
name = "docker-compose-host"
version = "0.1.0"
description = ""
authors = ["odd <odd12258053@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pyinstaller = "^4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
py_version = "37"
profile = "black"
include_trailing_comma = true
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py37']
skip-string-normalization = true
